[gd_scene load_steps=3 format=3 uid="uid://cseausqikrixk"]

[ext_resource type="Script" path="res://demo.gd" id="1_pgb5c"]
[ext_resource type="PackedScene" uid="uid://d0eqhw20qtp8" path="res://addons/fader/fader.tscn" id="2_5rr07"]

[node name="Demo" type="Node"]
script = ExtResource("1_pgb5c")

[node name="Fader" parent="." instance=ExtResource("2_5rr07")]

[node name="RedScreen" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="RedScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.67, 0.0893333, 0, 1)

[node name="Buttons" type="VSplitContainer" parent="RedScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoGreen" type="Button" parent="RedScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Green"

[node name="GoBlue" type="Button" parent="RedScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Blue"

[node name="GreenScreen" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="GreenScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290333, 0.67, 0, 1)

[node name="Buttons" type="VSplitContainer" parent="GreenScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoBlue" type="Button" parent="GreenScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Blue"

[node name="GoRed" type="Button" parent="GreenScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Red"

[node name="BlueScreen" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="BlueScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.457833, 0.67, 1)

[node name="Buttons" type="VSplitContainer" parent="BlueScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoRed" type="Button" parent="BlueScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Red"

[node name="GoGreen" type="Button" parent="BlueScreen/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Go Green"

[connection signal="pressed" from="RedScreen/Buttons/GoGreen" to="." method="_go_green"]
[connection signal="pressed" from="RedScreen/Buttons/GoBlue" to="." method="_go_blue"]
[connection signal="pressed" from="GreenScreen/Buttons/GoBlue" to="." method="_go_blue"]
[connection signal="pressed" from="GreenScreen/Buttons/GoRed" to="." method="_go_red"]
[connection signal="pressed" from="BlueScreen/Buttons/GoRed" to="." method="_go_red"]
[connection signal="pressed" from="BlueScreen/Buttons/GoGreen" to="." method="_go_green"]
